<resources>
    <string name="app_name" translatable="false">Alias</string>
    <string name="play_new_game">New Game</string>
    <string name="resume">Resume</string>
    <string name="rules">Rules</string>
    <string name="dictionary">Dictionary</string>
    <string name="select_dictionary">Select</string>
    <string name="game_teams">Teams</string>
    <string name="add_team">Add new team</string>
    <string-array name="teams_array">
        <item>Greens</item>
        <item>Reds</item>
        <item>Yellows</item>
        <item>Blacks</item>
        <item>Pinks</item>
        <item>Oranges</item>
        <item>Golds</item>
        <item>Grays</item>
        <item>Blues</item>
        <item>Purples</item>
    </string-array>
    <string name="swipe_to_delete">Swipe to remove</string>
    <string name="settings">Settings</string>
    <string name="round_time">Round time</string>
    <string name="round_time_explanation">for which you must guess the words</string>
    <string name="seconds">sec</string>
    <string name="words_amount">Words amount</string>
    <string name="for_victory">for victory</string>
    <string name="word_plus_minus">words</string>
    <string name="game_mode">Game modes</string>
    <string name="last_word">The last word is for everyone</string>
    <string name="last_word_explanation">The word that wasn\'t guessed after the time limit can be guessed by everyone</string>
    <string-array name="categoriesEN">
        <item>Easy dictionary</item>
        <item>Hard dictionary</item>
    </string-array>
    <string-array name="categoriesHE">
        <item>מילון קל</item>
        <item>מילון קשה</item>
    </string-array>
    <string-array name="categories">
        <item>Easy dictionary</item>
        <item>Hard dictionary</item>
    </string-array>
    <string name="en">EN</string>
    <string name="he">HE</string>
    <string name="teams_number_limit">The maximum number of teams should not be more than 4</string>
    <string name="min_round_time">Minimum time: 30 seconds</string>
    <string name="start_game">START</string>
    <string name="dictionary_not_selected">Select a dictionary</string>
    <string name="min_two_teams">Need at least 2 teams</string>
    <string name="go">GO!</string>
    <string name="next_team">Next team</string>
    <string name="total_score">Total score</string>
    <string name="played_in_round">Played in round</string>
    <string name="sure_fore_new_game">Do you want to start a new game?</string>
    <string name="current_will_be_deleted">The current game will be deleted</string>
    <string name="yes">Yes</string>
    <string name="no">Cancel</string>
    <string name="guessed">Guessed</string>
    <string name="pass">Pass</string>
    <string name="points">Points:</string>
    <string name="guessed_words">Guessed words</string>
    <string name="passed_words">Passed words</string>
    <string name="unread_words">Unread words</string>
    <string name="to_guessed">To guessed words</string>
    <string name="to_passed">To passed words</string>
    <string name="to_unread">To unread words</string>
    <string name="congratulations">Congratulations!</string>
    <string name="won">Won</string>
    <string name="finish">Finish</string>
    <string name="exit_tomenu_quest">Exit to menu?</string>
    <string name="progress_will_be_deleted">The round progress will not be saved</string>
    <string name="guessed_by">Guessed by</string>
    <string name="last_word_guessed">Last word -</string>
    <string name="nobody">Nobody</string>
    <string name="plus_one_point_to">+1 point to</string>
    <string name="game_rules">Game rules</string>
    <string name="rule1">Alias is an educational team game which goal is to explain words.</string>
    <string name="rule2">Each player of the team have to explain to the teammates as many words displayed on the screen as possible. It’s forbidden to use conjugates, to use gestures while explaining or to translate the words to foreign languages.</string>
    <string name="rule3">Each guessed word brings +1 point to the team, and each passed word brings -1 point.  If the team did not have time to answer the last word - the word is not read and the team gets 0 points for this word.  In the settings you can sign “last word for everyone” – this way each team can to guess the last word and to get +1 point.</string>
    <string name="rule4">The game continues until one of the teams will get the necessary words number at the end of the round. If there are more than one winner with the same number of points, the game continues until the winner is determined.</string>
    <string name="sharing_txt">Hey, I\'m playing Alias! Try it! Download it here</string>
</resources>