<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo_iv"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/mylogo"/>

        <ImageView
            android:id="@+id/shine_iv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignEnd="@+id/logo_iv"
            android:layout_alignTop="@+id/logo_iv"
            android:background="@android:color/transparent"
            android:src="@drawable/shine" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_gravity="bottom|center"
        android:orientation="vertical">

        <Button
            android:id="@+id/resume_game_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/btns_shapes_selector"
            android:text="@string/resume"
            android:textAllCaps="false"
            android:textColor="@drawable/main_btns_color_selector"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible"
            android:enabled="false"/>

        <Button
            android:id="@+id/new_game_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/btns_shapes_selector"
            android:text="@string/play_new_game"
            android:textAllCaps="false"
            android:textColor="@drawable/main_btns_color_selector"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/rules_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/btns_shapes_selector"
            android:text="@string/rules"
            android:textAllCaps="false"
            android:textColor="@drawable/main_btns_color_selector"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>


